# Application

./: README.md
LifeGame/app/: build.gradle
LifeGame/app/src/main/: AndroidManifest.xml
MyContentProvider/app/: build.gradle
MyContentProvider/app/src/main/: AndroidManifest.xml
MyContentProviderTesting/app/: build.gradle
MyContentProviderTesting/app/src/main/: AndroidManifest.xml
MyContentProviderTesting/app/src/main/cpp/: native-lib.cpp
OpenCVDemo/: README
OpenCVDemo/app/: CMakeLists.txt  build.gradle
OpenCVDemo/app/src/androidTest/java/io/github/qi1002/opencvdemo/: ExampleInstrumentedTest.java
OpenCVDemo/app/src/main/: AndroidManifest.xml
OpenCVDemo/app/src/main/cpp/: DetectionBasedTracker_jni.cpp  io_github_qi1002_opencvdemo_DetectionBasedTracker.h  io_github_qi1002_opencvdemo_JniActivity.h  native-lib.cpp
OpenCVDemo/app/src/main/java/io/github/qi1002/opencvdemo/: DetectionBasedTracker.java  FaceDetectActivity.java  JavaActivity.java  JniActivity.java
OpenCVDemo/app/src/main/res/layout/: activity_java.xml
OpenCVDemo/app/src/test/java/io/github/qi1002/opencvdemo/: ExampleUnitTest.java
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  detect_roi_jni.cpp  detect_roi_jni.h
app/tools/: transparent.py  yuv420.py
iCamera/: README.md
iCamera/app/: CMakeLists.txt  build.gradle
iCamera/app/src/main/: AndroidManifest.xml
iCamera/gradle/wrapper/: gradle-wrapper.properties
iLearn/: README.md
iLearn/app/: build.gradle
iLearn/gradle/wrapper/: gradle-wrapper.properties
(+121 files in other folders)
